tests/errors/object_selection_invalid_field_native.dang
# Test that selecting a nonexistent field in a native object selection raises an error

type Foo {
  name: String! = "hello"
  age: Int! = 25
}

let foo = Foo
let result = foo.{{name, unknown}}
